02-cilium-l7-identity/manifests/policy-cart-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cart-l7
  namespace: shop
spec:
  endpointSelector:
    matchLabels:
      app: cart
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: web
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
              - method: "POST"
